[package]
name = "package-json"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]

[dependencies]
serde         = "1.0"
serde_json    = "1.0"
serde_derive  = "1.0"
semver = { version = "0.9", features = ["serde"]}
url = { git = "https://github.com/hoodie/rust-url", features = ["serde"] }
log = "0.4.1"
